<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">Research</string>
    <string name="action_settings">Options</string>
    <string name="action_language">Change language</string>
    <string name="action_search">Search</string>
    <!-- Auth -->
    <string name="login_error_title">"Cannot log in</string>
    <string name="login_error_message">Please check your login/password. If the problem persists, please contact Natixis support for assistance.</string>
    <string name="email_">E-mail</string>
    <string name="password_">Password</string>
    <string name="accept">I accept</string>
    <string name="refuse">I do not accept</string>
    <string name="are_you_sure_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="menu">Menu</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="all_publications">All publications</string>
    <string name="downloads">My Downloads</string>
    <string name="favorites">My Favorites</string>
    <string name="aucun_documents">No publication</string>
    <string name="connection_informations">If you already receive by email Natixis Research publications, switch to authentificated mode. This will allow you to access your usual subscriptions. This login stage is only required for your first connection.</string>
    <string name="connexion">Connect</string>
    <string name="share">Share</string>
    <string name="unable_to_prepare_file">Unable to prepare file for sending (check if it\'s correctly downloaded)...</string>
    <string name="aucun_univers">You have not yet configured quick links to your expertise sections.</string>
    <string name="not_authentified">Login</string>
    <string name="no_connection">No network connection available.</string>
    <string name="extend_search">Extend to all expertises</string>
    <string name="are_you_sure_you_want_to_delete_this_file">Are you sure you want to delete this document from your cache ? It will be available in offline mode.</string>
    <string name="are_you_sure_logout">All your favorites and cached documents will be deleted.\r\nAre you sure you want to logout ?</string>
    <string name="file_deletion">Publication deletion</string>
    <string name="logout">Disconnect</string>
    <string name="login">Login</string>
    <string name="log_in">Login</string>
    <string name="day">d</string>
    <string name="my_account">My account</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="application_support">Technical problem ?</string>
    <string name="contact_support">Contact Natixis support</string>
    <string name="stockage_management">Stockage management</string>
    <string name="empty_downloads">Empty downloads</string>
    <string name="contact_support_desc">You may contact Natixis support for any question concerning this application.\r\nJust tap the button above and fill in the email form.</string>
    <string name="loading">Loading</string>
    <string name="remove_from_favorites">Remove from your favorites</string>
    <string name="add_to_favorites">Add to your favorites </string>
    <string name="remove_from_downloads">Remove from the read list</string>
    <string name="download_document">Download the publication</string>
    <string name="share_doc_by_mail">Share via email</string>
    <string name="open_document">Open the publication</string>
    <string name="what_you_want_to_do_with_doc">What do you want to do?</string>
    <string name="doc_added_to_favorites">Publication added to favorites</string>
    <string name="doc_removed_from_favorites">Publication removed from your Favorites</string>
    <string name="doc_removed_from_cache">Publication removed from your Downloads</string>
    <string name="download_in_progress">Downloading publication...</string>
    <string name="done">Done</string>
    <string name="document_downloaded">Publication downloaded</string>
    <string name="legal_information">Legal information</string>
    <string name="you_are_connected">Your are logged in</string>
    <string name="you_are_disconnected">Your are logged out</string>
    <string name="cgv_content">This application was placed on line by Natixis Wholesale Banking and is exclusively addressed to professional clients professionals, to distributors and to IFAs as defined by the MiFID directive. Those persons not included in these categories may not use this application.\n\nThe information contained in this application is provided by Natixis Wholesale Banking. It is not intended to be distributed or used in a country or jurisdiction where such distribution or use would infringe the applicable laws and regulations, or where such distribution or use would compel Natixis Wholesale Banking and its affiliates/partners to comply with the registration obligations of these countries or jurisdictions.</string>
    <string name="cgv_title">Conditions of Use</string>
    <string name="cgv_refused">The application is now going to close because you refused to accept the conditions of use.\nYou may accept them when you next connect.</string>
    <string name="your_are_not_logged_in">You are not logged in</string>
    <string name="connect">Connect</string>
    <string name="space">Used</string>
    <string name="no_mail_application">No mail application found.</string>
    <string name="title_clear_storage">Deletion</string>
    <string name="question_clear_storage">Are you sure that you want to delete all the documents in your Downloads ?</string>
    <string name="search_result_for">Search results for </string>
    <string name="forgot_password">Forgotten password?</string>
    <string name="you_have_no_downloads">Your downloads are empty.</string>
    <string name="description_downloads">Use the icon to download a publication. You can then read offline.</string>
    <string name="you_have_no_favorites">Vous n\'avez pas de favoris</string>
    <string name="description_add_favorites">Mettez en favoris vos documents préférés afin de bénéficier de la fonctionnalité de consultation hors réseau.</string>
    <string name="if_client_login">Already registered ?\nPlease, log in.</string>
    <string name="consultation_help">Choose to either read all publications directly online, or select those you wish to read from the drop-down list</string>
    <string name="selection_help">Select the expertise sections you regularly read for quick access. (The star icon lets you add an expertise section into selection)</string>
    <string name="videos">Vidéos</string>
    <string name="select_universe">Select</string>
    <string name="ma_selection">My selection</string>
    <string name="bonjour">Welcome</string>
    <string name="consulter">Consult</string>
    <string name="nouveau_client">New Customer ?</string>
    <string name="technical_issue">Technical issue</string>
    <string name="commercial_request">Commercial request</string>

</resources>
