<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#EAEAEA"
        android:orientation="horizontal"
        android:id="@+id/layout_buttons"
        android:padding="12dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btRefuse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:layout_weight="1"

            android:background="#272727"
            android:onClick="onClickRefuse"
            android:text="@string/refuse"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btAccept"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:background="@color/line_theme"
            android:onClick="onClickAccept"
            android:text="@string/accept"
            android:textColor="#fff" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#6E6E6E"
        android:layout_above="@id/layout_buttons"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_buttons">

        <TextView
            android:id="@+id/txtCGV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:text="@string/cgv_content"
            android:textSize="15sp" />
    </ScrollView>

</RelativeLayout>