<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ConnectionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/login_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"

                android:orientation="vertical"
                android:padding="13dp">

                <ImageView
                    android:id="@+id/iv_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:scaleType="center"
                    android:src="@drawable/bonhomme" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/if_client_login"
                    android:textColor="@color/drawer_text"
                    android:textStyle="italic" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                            <LinearLayout
                android:id="@+id/layout_identifiants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/txt_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/login"
                    android:inputType="textNoSuggestions"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    android:singleLine="true"
                    android:textSize="15sp"
                    android:textColorHint="@color/button_gray" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_centerVertical="true"
                    android:background="@color/light_gray" />


                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/password_"
                    android:lines="1"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:fontFamily="sans-serif"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColorHint="@color/button_gray" />
            </LinearLayout>

                <ProgressBar
                    android:id="@+id/progress_login"
                    style="@android:style/Widget.Holo.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"

                    android:visibility="gone" />
            </RelativeLayout>





            <Button
                android:id="@+id/bt_connexion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/layout_identifiants"
                android:layout_marginTop="9dp"
                android:background="@color/button_purple"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:textAllCaps="false"
                android:text="@string/connexion"
                android:textColor="@color/button_purple_text"

                android:visibility="visible" />


            <TextView
                android:id="@+id/txtForgotPasword"
                style="@android:style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/button_gray" />


            <Button
                android:id="@+id/bt_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/button_gray"
                android:drawablePadding="10dp"
                android:textAllCaps="false"
                android:gravity="center"
                android:text="@string/nouveau_client"
                android:textColor="@color/light_gray"
                android:visibility="visible" />

        </LinearLayout>

    </ScrollView>
</FrameLayout>
